--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.7
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
+      - name: Install npm
+        uses: npm/action-setup@v4
         with:
           version: 9.5.0
       - name: install Nodejs
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: 'npm'
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
       - name: Run tests
-        run: pnpm test
+        run: npm test
 
   build:
     runs-on: ubuntu-latest
@@ -30,19 +30,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.7
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
+      - name: Install npm
+        uses: npm/action-setup@v4
         with:
           version: 9.5.0
       - name: install Nodejs
         uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: 'npm'
       - name: Install dependencies
-        run: pnpm install
+        run: npm install
       - name: Build project
-        run: pnpm run build
+        run: npm run build
       - name: Upload production-ready build files
         uses: actions/upload-pages-artifact@v3
         with:
