--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,7 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
+          VITE_BASE_URL: '/personal-portfolio/'
 
       - name: Upload production-ready build files
         uses: actions/upload-pages-artifact@v3
@@ -87,6 +88,7 @@ jobs:
         uses: actions/configure-pages@v4
         with:
           static_site_generator: vite
+          enablement: true
 
       - name: Deploy to GitHub Pages
         id: deployment
